# neural-network-from-scartch

./: README.md  basic-implementation.ipynb  pyproject.toml
static/: model-graph
